--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,37 @@
+body{
+  background-image: url('../images/backgroundImage.jpeg');
+
+}
+
 main{
   text-align: center;
   box-sizing: border-box;
+  width: 700px;
+  margin: 0 auto;
+  background-color: white;
+  height: 100vh;
+  margin-top 0;
+  padding: 20px;
+  font-family: 'Farro', sans-serif;
 }
 
 h1{
   font-size: 50px;
-  margin-top: 20px;
-  margin-bottom: 30px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+
 }
 
 p{
   font-size: 20px;
+  margin-bottom: 25px;
+}
+span{
+  margin-top: 50px;
 }
 .inputButton{
 
 }
 .questionSpan{
-  margin: 0px 5px;
+  margin: 0px 7px;
 }
